--- a/lakefile.toml
+++ b/lakefile.toml
@@ -98,6 +98,11 @@ name = "redundent_imports"
 supportInterpreter = true
 srcDir = "scripts/MetaPrograms"
 
+[[lean_exe]]
+name = "make_tag"
+supportInterpreter = true
+srcDir = "scripts/MetaPrograms"
+
 # -- Optional inclusion of openAI_doc_check. Needs `llm` above.
 #[[lean_exe]]
 #name = "openAI_doc_check"
