chore: Workflow for duplicate TODOs

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -103,6 +103,11 @@ name = "make_tag"
 supportInterpreter = true
 srcDir = "scripts/MetaPrograms"
 
+[[lean_exe]]
+name = "check_dup_tags"
+supportInterpreter = true
+srcDir = "scripts/MetaPrograms"
+
 # -- Optional inclusion of openAI_doc_check. Needs `llm` above.
 #[[lean_exe]]
 #name = "openAI_doc_check"
