chore: Bump lake update

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -15,10 +15,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4e685d14db58b1ab29024bb0761902a3615f3f14",
+   "rev": "b1993479392f304ab4e33947612d512d43b90d2d",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.20.0-rc5",
+   "inputRev": "nightly-testing-2025-05-22",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/mhuisi/lean4-cli",
@@ -105,10 +105,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9264d548cf1ccf0ba454b82f931f44c37c299fc1",
+   "rev": "c37af3a23d5798c560bce190bfd779710eaff1e1",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "nightly-testing",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
@@ -125,10 +125,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "78e1181c4752c7e10874d2ed5a6a15063f4a35b6",
+   "rev": "0d100b8f650ce017029e3a71550b9aae96701d62",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "nightly-testing",
    "inherited": true,
    "configFile": "lakefile.toml"}],
  "name": "PhysLean",
