--- a/lakefile.toml
+++ b/lakefile.toml
@@ -8,7 +8,7 @@ defaultTargets = ["PhysLean"]
 [[require]]
 name = "mathlib"
 git = "https://github.com/leanprover-community/mathlib4.git"
-rev = "v4.20.0-rc5"
+rev = "nightly-testing-2025-05-22"
 
 [[require]]
 name = "«doc-gen4»"
