chore: fix toolchain and mathlib rev

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -15,10 +15,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "b1993479392f304ab4e33947612d512d43b90d2d",
+   "rev": "9c86e62be6ea5be3842cbecf6d441a72037563dc",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing-2025-05-22",
+   "inputRev": "9c86e62be6ea5be3842cbecf6d441a72037563dc",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/mhuisi/lean4-cli",
@@ -105,10 +105,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "c37af3a23d5798c560bce190bfd779710eaff1e1",
+   "rev": "76a782b161da3faacc43aa5471bbd2e1d262970a",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "master",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
@@ -125,10 +125,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "0d100b8f650ce017029e3a71550b9aae96701d62",
+   "rev": "9f34f4e523881779f8ba46c394c28571c4999db7",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"}],
  "name": "PhysLean",
