--- a/.github/workflows/PR_checklist.yml
+++ b/.github/workflows/PR_checklist.yml
@@ -1,9 +1,9 @@
 name: PR Comment
 
-on:
-  pull_request_target:
-    types:
-      - opened
+on: workflow_dispatch
+  #pull_request_target:
+  #  types:
+  #    - opened
 
 jobs:
     build:
