--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,14 @@
     "files.eol": "\n",
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    /**
+     The below setting requires the `TODO Highlight` vscode extension.
+     */
+    "todohighlight.keywords": [
+      {
+        "text": "sorryful",
+        "color": "#e1554f",
+        "backgroundColor": ""
+      }]
   }
