--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   get_data:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout project
         uses: actions/checkout@v4
