--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: "ignore,.github"
+          excluded_paths: "ignore,.github,./scripts,./docs,.gitignore"
