--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,5 +24,5 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
     - run: pwd
-    - run: pip install -r "scripts/requirements.txt"
-    - run: "scripts/treemap_gen.py"
+    - run: pip install -r "scripts/treemap_requirements.txt"
+    - run: scripts/treemap_gen.py
