--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,3 +26,11 @@ jobs:
     - run: pwd
     - run: pip install -r "scripts/treemap_requirements.txt"
     - run: python scripts/treemap_gen.py
+    - name: Commit and push generated image
+    - run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add treemap.png
+          git commit -m "Update treemap image [skip ci]" || echo "No changes to commit"
+          git push
+
