--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
     - run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add treemap.png
+          git add "docs/treemap.png"
           git commit -m "Update treemap image [skip ci]" || echo "No changes to commit"
           git push
 
