feat: Text based module doc linter

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -64,6 +64,10 @@ name = "redundent_imports"
 supportInterpreter = true
 srcDir = "scripts/MetaPrograms"
 
+[[lean_exe]]
+name = "module_doc_lint"
+srcDir = "scripts/MetaPrograms"
+
 ### Stats
 
 [[lean_exe]]
