--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,27 +5,27 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "2de7d2bd99cb73bd7d3d7d1cf12787c5412c49de",
+   "rev": "1cd7a1113090e216703e323e8fdcdf099f0a9c8a",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.23.0",
+   "inputRev": "v4.24.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "37df177aaa770670452312393d4e84aaad56e7b6",
+   "rev": "f897ebcf72cd16f89ab4577d0c826cd14afaafc7",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.23.0",
+   "inputRev": "v4.24.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/mhuisi/lean4-cli",
+  {"url": "https://github.com/leanprover/lean4-cli",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "41c5d0b8814dec559e2e1441171db434fe2281cc",
+   "rev": "91c18fa62838ad0ab7384c03c9684d99d306e1da",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -35,7 +35,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "7de009e167ba815c0111fe516ffbffc1a23035cc",
+   "rev": "e5aaa4949aad9a866aead1da5d5619e8decc8da7",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -55,7 +55,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "aaee7fa4a1a158bd814d76f642df8a1d19db9f49",
+   "rev": "66aefec2852d3e229517694e642659f316576591",
    "name": "MD4Lean",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -65,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a22e7c1fa7707fb7ea75f2f9fd6b14de2b7b87a9",
+   "rev": "dfd06ebfe8d0e8fa7faba9cb5e5a2e74e7bd2805",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -85,7 +85,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "7fca1d4a190761bac0028848f73dc9a59fcb4957",
+   "rev": "d768126816be17600904726ca7976b185786e6b9",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -95,17 +95,17 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "6e47cc88cfbf1601ab364e9a4de5f33f13401ff8",
+   "rev": "556caed0eadb7901e068131d1be208dd907d07a2",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.71",
+   "inputRev": "v0.0.74",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "247ff80701c76760523b5d7c180b27b7708faf38",
+   "rev": "725ac8cd67acd70a7beaf47c3725e23484c1ef50",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -115,7 +115,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9b703a545097978aef0e7e243ab8b71c32a9ff65",
+   "rev": "dea6a3361fa36d5a13f87333dc506ada582e025c",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -125,7 +125,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "d117e2c28cba42e974bc22568ac999492a34e812",
+   "rev": "8da40b72fece29b7d3fe3d768bac4c8910ce9bee",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
