--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,12 +54,8 @@ jobs:
           bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake exe sorry_lint"
 
       - name: runLinter on PhysLean
-        if: ${{ always() && steps.build.outcome == 'success' || steps.build.outcome == 'failure' }}
-        id: lint
-        uses: liskin/gh-problem-matcher-wrap@v3
-        with:
-          linters: gcc
-          run: env LEAN_ABORT_ON_PANIC=1 lake exe runLinter PhysLean
+        run: |
+          bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake exe runLinter PhysLean"
 
   style_lint:
     name: Python based style linter
