refactor: Fix typos in linters & speed up
Co-Authored-By: damiano <adomani@gmail.com>

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -64,7 +64,7 @@ srcDir = "scripts/MetaPrograms"
 
 
 [[lean_exe]]
-name = "redundent_imports"
+name = "redundant_imports"
 supportInterpreter = true
 srcDir = "scripts/MetaPrograms"
 
