simplification of build step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,12 +42,8 @@ jobs:
             bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake build -KCI | tee stdout.log"
 
       - name: runLinter on PhysLean
-        if: ${{ always() && steps.build.outcome == 'success' || steps.build.outcome == 'failure' }}
-        id: lint
-        uses: liskin/gh-problem-matcher-wrap@v3
-        with:
-          linters: gcc
-          run: env LEAN_ABORT_ON_PANIC=1 lake exe runLinter PhysLean
+        run: |
+          env LEAN_ABORT_ON_PANIC=1 lake exe runLinter PhysLean
 
       - name: check file imports
         run: |
