trying and inspecting workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
           lean --version
           lake --version
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
       - name: build cache
         run: |
           lake exe cache get
@@ -40,6 +44,14 @@ jobs:
           linters: gcc
           run: |
             bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake build -KCI | tee stdout.log"
+
+      - name: check for duplicate TODO tags
+        run: |
+          bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake exe check_dup_tags"
+
+      - name: sorryful and psuedo attribute linter
+        run: |
+          bash -o pipefail -c "env LEAN_ABORT_ON_PANIC=1 lake exe sorry_lint"
 
       - name: runLinter on PhysLean
         if: ${{ always() && steps.build.outcome == 'success' || steps.build.outcome == 'failure' }}
