feat: Clarify steps for bumping dependencies in Bump.yml (#931)
* Clarify steps for bumping dependencies in Bump.yml

Updated instructions for removing the .lake file and running lake update.

* Update label for previous bumps in issue template

* Update references to HEPLean

--- a/.github/ISSUE_TEMPLATE/Bump.yml
+++ b/.github/ISSUE_TEMPLATE/Bump.yml
@@ -20,7 +20,8 @@ body:
     options:
       - label: Update mathlib rev in lakefile.toml.
       - label: Update doc-gen4 rev in lakefile.toml.
-      - label: Run `rm -rf .lake; lake update`.
+      - label: Remove the `.lake` file, e.g. on unix run `rm -rf .lake`.
+      - label: Run `lake update`.
       - label: Check `lean-toolchain` updates correctly.
       - label: Update the Lean version badge in the `README.md` file.
   validations:
@@ -55,15 +56,17 @@ body:
     description: Please check off these items as you complete them
     options:
       - label: Create a tag for the new version.
+      - label: Put a bump notice on this [thread](https://leanprover.zulipchat.com/#narrow/channel/479953-PhysLean/topic/Bumps.20of.20PhysLean.2E/with/572707099).
   validations:
     required: false
 - type: textarea
   id: examples_of_previous_bumps
   attributes:
-    label: Previous bump
+    label: Example past bumps
     description: Please do not modify this text.
     value: |
-      [v4.20.0](https://github.com/HEPLean/PhysLean/pull/591),
-      [v4.20.0-rc5](https://github.com/HEPLean/PhysLean/pull/566)
+      [v4.20.0](https://github.com/lean-phys-community/PhysLean/pull/591),
+      [v4.20.0-rc5](https://github.com/lean-phys-community/PhysLean/pull/566)
+      [v4.27.0](https://github.com/lean-phys-community/PhysLean/pull/929)
   validations:
     required: true
